plugins {
    id 'java'
}

group 'uk.gov.di'
version 'unspecified'

repositories {
    mavenCentral()
}

def dependencyVersions = [
    jackson_version: '2.12.4',
]

dependencies {
    implementation "com.amazonaws:aws-lambda-java-core:1.2.1",
            "com.amazonaws:aws-lambda-java-events:3.9.0",
            "com.amazonaws:aws-java-sdk-dynamodb:1.12.43",
            "software.amazon.awssdk:sqs:2.17.15",
            "com.nimbusds:oauth2-oidc-sdk:9.11",
            "com.nimbusds:nimbus-jose-jwt:9.11.2",
            "com.fasterxml.jackson.core:jackson-core:${dependencyVersions.jackson_version}",
            "com.fasterxml.jackson.core:jackson-databind:${dependencyVersions.jackson_version}",
            "com.fasterxml.jackson.core:jackson-annotations:${dependencyVersions.jackson_version}",
            "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${dependencyVersions.jackson_version}",
            "io.lettuce:lettuce-core:6.1.4.RELEASE",
            "uk.gov.service.notify:notifications-java-client:3.17.2-RELEASE",
            "org.bouncycastle:bcprov-jdk15on:1.69",
            "com.googlecode.libphonenumber:libphonenumber:8.12.28"
    runtimeOnly "org.apache.logging.log4j:log4j-slf4j18-impl:2.13.0",
            "com.amazonaws:aws-lambda-java-log4j2:1.2.0"
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2',
            'org.junit.jupiter:junit-jupiter-params:5.7.2',
            'com.amazonaws:aws-lambda-java-tests:1.0.2',
            'org.mockito:mockito-core:3.11.2',
            'org.hamcrest:hamcrest:2.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
}

test {
    useJUnitPlatform()
}

task buildZip(type: Zip) {
    from compileJava
    from processResources
    into('lib') {
        from configurations.runtimeClasspath
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}
build.dependsOn buildZip